# dbt-server

./: .gitignore  CODE_OF_CONDUCT.rst  CONTRIBUTING  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  debug.py  dev-requirements.txt  init_project.py  main.py  noxfile.py  pyproject.toml  requirements.txt  test-requirements.txt  test_server.py
.changes/: README.md  header.tpl.md
.changes/unreleased/: Docs-20221006-191346.yaml  Docs-20221013-131653.yaml  Docs-20221208-190809.yaml  Features-20221102-151153.yaml  Features-20221207-111706.yaml  Features-20221216-133823.yaml  Features-20230117-083848.yaml  Features-20230130-160207.yaml  Features-20230206-120426.yaml  Features-20230221-183401.yaml  Features-20230301-095238.yaml  Features-20230324-103931.yaml  Features-20230324-144711.yaml  Features-20230428-090955.yaml  Features-20230517-142113.yaml  Features-20230523-150756.yaml  Features-20230526-092501.yaml  Features-20230710-140525.yaml  Features-20230721-162224.yaml  Fixes-20221104-150715.yaml  Fixes-20221129-082728.yaml  Fixes-20221129-170329.yaml  Fixes-20221207-095530.yaml  Fixes-20221208-125119.yaml  Fixes-20221208-130454.yaml  Fixes-20230126-120252.yaml  Fixes-20230228-180450.yaml  Fixes-20230418-103314.yaml  Fixes-20231030-233052.yaml  Fixes-20231030-235201.yaml  Under the Hood-20221013-142450.yaml  (+10 more)
.github/: CODEOWNERS  _README.md  dependabot.yml  pull-request-template.md
.github/workflows/: main.yml  (+3 more)
bash/: celeryd.sh  install-venv.sh  liveliness.sh  start-celery.sh  ubuntu-run.sh  ubuntu-setup-postgres.sh  ubuntu-setup-redis.sh  ubuntu-start-redis.sh
clients/: __init__.py  filesystem.py
configs/: celeryd
dbt_server/: __init__.py  crud.py  database.py  exceptions.py  flags.py  flags_test.py  helpers.py  logging.py  models.py  schemas.py  server.py  state.py  state_test.py  trace_memory.py  tracer.py  views.py  views_temp.py  views_test.py
dbt_worker/: app.py  celeryconfig.py  exp.py  tasks.py  tasks_test.py
tests/: __init__.py  context.py  test_main.py
(+72 files in other folders)
